app/assets/scss/components/_hero.scss
.hero {
  position: relative;
  width: 100%;
  height: 100vh;
  clip-path: inset(0);
  background-color: #010511; // couleur de fallback
}

// Toutes les couches
.hero__layer {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
}

// Image standard — couvre toute la couche
.hero__img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;

  // Pour aurora_stars et moon qui ont un fond noir
  &--screen {
    mix-blend-mode: screen;
  }

  // Éléments ancrés en bas (montagnes, arbres, lac)
  &--bottom {
    top: auto;
    bottom: 0;
    height: auto; // hauteur naturelle de l'image
    object-fit: initial;
    &--trees{
      top: 10%;
    }
  }
  &--center {
    top: 60%;
    bottom: 0;
    height: auto; // hauteur naturelle de l'image
    object-fit: initial;
  }
  &--lake {
    top:-1%;
  }
  // Lune positionnée à droite
  &--moon {
    top: 30%;
    right: 15%;
    left: auto;
    width: 140px;
    height: auto;
    object-fit: initial;
    mix-blend-mode: screen;
    // Halo CSS
    filter: drop-shadow(0 0 40px rgba(200, 220, 255, 0.4))
    drop-shadow(0 0 80px rgba(150, 190, 255, 0.2));
  }
  &--exclusion{
    mix-blend-mode: exclusion;
    bottom: -3%;
  }
}

// Contenu texte
.hero__content {
  position: absolute;
  inset: 0;
  z-index: 20;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 0 1.5rem;
  gap: 1rem;
  top: -20%;
}

.hero__intro {
  font-family: var(--font-body), serif;
  font-size: 1.125rem;
  color: var( --color-white-intro);
  letter-spacing: 0.05em;
}

.hero__title {
  font-family: var(--font-title), serif;
  font-size: clamp(3rem, 7vw, 6rem);
  font-weight: 500;
  color: var(--color-text-light);
  line-height: 1.1;
  letter-spacing: 0.02em ;
}

.hero__badge {
  display: inline-block;
  padding: 0.4rem 1.25rem;
  font-size: 0.9rem;
  font-family: var(--font-body), serif;
  letter-spacing: 0.04em;
  color: var(--color-aurora-blue);

  // Fond maquette Figma (Bleu nuit à 50%)
  background-color: rgba(5, 12, 25, 0.5);

  // flou pour l'effet "Glassmorphism"
  backdrop-filter: blur(4px);

  // application de la bordure
  @include gradient-border-aurora(9999px, 90deg, 1px);

  // Sécurité pour le positionnement du pseudo-élément
  position: relative;
  border-radius: 9999px;
}

.hero__tagline {
  font-family: var(--font-body), serif;
  font-size: 1rem;
  font-style: italic;
  color: var(--color-text-white);
  max-width: 100%;
  line-height: 1.7;
  margin-top: 0.5rem;
  letter-spacing: 0.5px;
}

